--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div id="9" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id ="hour9" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -42,7 +42,7 @@
       
       <div id="10" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id = "hour10" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -51,7 +51,7 @@
       
       <div id="11" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"></textarea>
+        <textarea id = "hour11" class="col-8 col-md-10 description" rows="3"></textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -59,7 +59,7 @@
 
       <div id="12" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id = "hour12" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -67,7 +67,7 @@
 
       <div id="13" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id = "hour13" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -75,7 +75,7 @@
 
       <div id="14" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id = "hour14" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -83,7 +83,7 @@
 
       <div id="15" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id = "hour15" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -91,7 +91,7 @@
 
       <div id="16" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id = "hour16" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -99,7 +99,7 @@
 
       <div id="17" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id = "hour17" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn btn-danger saveBtn col-2 col-md-1 my-2 rounded-circle" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
